# KVIrc-old

./: .cproject  .gitignore  .project  .svnignore  CMakeLists.txt  ChangeLog  README.md  TODO-Qt4  config.pri  howtobuild.txt  kvirc.pro  macx.env
data/deftheme/silverirc/: CMakeLists.txt
src/: .svnignore  CMakeLists.txt  src.pro
src/kvilib/: .svnignore  CMakeLists.txt  kvilib.pro  pch.h  using_kvilib.pri
src/kvilib/config/: kvi_defaults.h  kvi_maccfg.h  kvi_settings.h  kvi_sourcesdate.h  kvi_version.h  kvi_wincfg.h
src/kvilib/core/: kvi_asciidict.h  kvi_dict.h  kvi_error.cpp  kvi_error.h  kvi_heapobject.cpp  kvi_intdict.h  kvi_inttypes.h  kvi_list.h  kvi_malloc.cpp  kvi_memmove.cpp  kvi_memmove.h  kvi_ptrdict.h  kvi_qcstring.h  kvi_qstring.cpp  kvi_qstring.h  kvi_string.cpp  kvi_string.h  kvi_valuelist.h
src/kvilib/ext/: kvi_accel.h  kvi_cmdformatter.cpp  kvi_config.cpp  kvi_config.h  kvi_crypt.cpp  kvi_crypt.h  kvi_dcophelper.cpp  kvi_dcophelper.h  kvi_doublebuffer.cpp  kvi_draganddrop.h  kvi_garbage.cpp  kvi_garbage.h  kvi_imagelib.cpp  kvi_imagelib.h  kvi_md5.cpp  kvi_mediatype.cpp  kvi_mediatype.h  kvi_miscutils.cpp  kvi_msgtype.cpp  kvi_msgtype.h  kvi_osinfo.cpp  kvi_parameterlist.cpp  kvi_pixmap.cpp  kvi_pixmap.h  kvi_proxydb.cpp  kvi_proxydb.h  kvi_regchan.cpp  kvi_regchan.h  kvi_regusersdb.cpp  kvi_regusersdb.h  kvi_sharedfiles.cpp  kvi_sharedfiles.h  kvi_stringconversion.cpp  kvi_stringconversion.h
src/kvilib/file/: kvi_file.cpp  kvi_file.h  kvi_fileutils.cpp  kvi_packagefile.cpp  kvi_packagefile.h
src/kvilib/irc/: kvi_avatar.cpp  kvi_avatar.h  kvi_avatarcache.cpp  kvi_avatarcache.h  kvi_ircmask.cpp  kvi_ircmask.h  kvi_ircserver.cpp  kvi_ircserver.h  kvi_ircserverdb.cpp  kvi_ircserverdb.h  kvi_ircuserdb.cpp  kvi_ircuserdb.h  kvi_mirccntrl.cpp  kvi_nickserv.cpp  kvi_nickserv.h  kvi_useridentity.cpp  kvi_useridentity.h
src/kvilib/net/: kvi_dns.cpp  kvi_dns.h  kvi_http.cpp  kvi_http.h  kvi_netutils.cpp  kvi_socket.h  kvi_ssl.cpp  kvi_ssl.h  kvi_url.cpp
src/kvilib/system/: kvi_library.h  kvi_locale.cpp  kvi_locale.h  kvi_process.h  kvi_stdarg.h  kvi_thread.cpp  kvi_thread.h  kvi_time.cpp  kvi_time.h
src/kvilib/tal/: kvi_tal_application.cpp  kvi_tal_application_kde.h  kvi_tal_application_qt.h  kvi_tal_filedialog.cpp  kvi_tal_filedialog.h  kvi_tal_filedialog_kde.h  kvi_tal_filedialog_qt.h  kvi_tal_filedialog_qt4.h  kvi_tal_grid.cpp  kvi_tal_grid.h  kvi_tal_grid_qt3.h  kvi_tal_grid_qt4.h  kvi_tal_groupbox.cpp  kvi_tal_groupbox.h  kvi_tal_groupbox_qt3.h  kvi_tal_groupbox_qt4.h  kvi_tal_hbox.cpp  kvi_tal_hbox.h  kvi_tal_hbox_qt3.h  kvi_tal_hbox_qt4.h  kvi_tal_iconview.cpp  kvi_tal_iconview.h  kvi_tal_iconview_qt3.h  kvi_tal_iconview_qt4.h  kvi_tal_listbox.cpp  kvi_tal_listbox.h  kvi_tal_listview.cpp  kvi_tal_listview.h  kvi_tal_mainwindow.cpp  kvi_tal_mainwindow.h  kvi_tal_mainwindow_kde.h  kvi_tal_mainwindow_qt4.h  kvi_tal_menubar.cpp  kvi_tal_menubar_qt.h  kvi_tal_popupmenu.cpp  kvi_tal_popupmenu.h  kvi_tal_scrollview.cpp  kvi_tal_scrollview.h  kvi_tal_tabdialog.cpp  kvi_tal_tabdialog.h  (+16 more)
src/kvirc/: CMakeLists.txt  kvirc.pro  pch.h  using_kvirc.pri
src/kvirc/kernel/: kvi_action.cpp  kvi_action.h  kvi_actionmanager.cpp  kvi_actionmanager.h  kvi_app.cpp  kvi_app.h  kvi_app_fs.cpp  kvi_app_setup.cpp  kvi_asynchronousconnectiondata.cpp  kvi_asynchronousconnectiondata.h  kvi_coreactionnames.h  kvi_coreactions.cpp  kvi_coreactions.h  kvi_customtoolbardescriptor.cpp  kvi_customtoolbardescriptor.h  kvi_customtoolbarmanager.cpp  kvi_customtoolbarmanager.h  kvi_filetransfer.cpp  kvi_filetransfer.h  kvi_iconmanager.cpp  kvi_iconmanager.h  kvi_internalcmd.cpp  kvi_ipc.cpp  kvi_ipc.h  kvi_ircconnection.cpp  kvi_ircconnection.h  kvi_ircconnectionantictcpflooddata.cpp  kvi_ircconnectionantictcpflooddata.h  kvi_ircconnectionasyncwhoisdata.cpp  kvi_ircconnectionasyncwhoisdata.h  kvi_ircconnectionnetsplitdetectordata.cpp  kvi_ircconnectionnetsplitdetectordata.h  kvi_ircconnectionserverinfo.cpp  kvi_ircconnectionserverinfo.h  kvi_ircconnectionstatedata.cpp  kvi_ircconnectionstatedata.h  kvi_ircconnectionstatistics.cpp  kvi_ircconnectionstatistics.h  kvi_ircconnectiontarget.cpp  kvi_ircconnectiontarget.h  (+25 more)
src/kvirc/kvs/: kvi_kvs.cpp  kvi_kvs_action.cpp  kvi_kvs_action.h  kvi_kvs_aliasmanager.cpp  kvi_kvs_aliasmanager.h  kvi_kvs_array.cpp  kvi_kvs_array.h  kvi_kvs_asyncdnsoperation.cpp  kvi_kvs_asyncoperation.cpp  kvi_kvs_asyncoperation.h  kvi_kvs_callbackobject.cpp  kvi_kvs_corecallbackcommands.cpp  kvi_kvs_corefunctions.cpp  kvi_kvs_corefunctions.h  kvi_kvs_corefunctions_af.cpp  kvi_kvs_corefunctions_gl.cpp  kvi_kvs_corefunctions_mr.cpp  kvi_kvs_corefunctions_sz.cpp  kvi_kvs_coresimplecommands.cpp  kvi_kvs_coresimplecommands_af.cpp  kvi_kvs_coresimplecommands_gl.cpp  kvi_kvs_coresimplecommands_mr.cpp  kvi_kvs_coresimplecommands_sz.cpp  kvi_kvs_dnsmanager.cpp  kvi_kvs_dnsmanager.h  kvi_kvs_event.cpp  kvi_kvs_event.h  kvi_kvs_eventhandler.cpp  kvi_kvs_eventhandler.h  kvi_kvs_eventmanager.cpp  kvi_kvs_eventmanager.h  kvi_kvs_eventtable.cpp  kvi_kvs_eventtable.h  kvi_kvs_hash.cpp  kvi_kvs_hash.h  kvi_kvs_kernel.cpp  kvi_kvs_kernel.h  kvi_kvs_moduleinterface.cpp  kvi_kvs_moduleinterface.h  kvi_kvs_object.cpp  (+110 more)
src/kvirc/module/: kvi_mexserverimport.h  kvi_module.cpp  kvi_module.h  kvi_moduleextension.cpp  kvi_moduleextension.h  kvi_modulemanager.cpp  kvi_modulemanager.h
src/kvirc/sparser/: kvi_antispam.cpp  kvi_ircmessage.cpp  kvi_ircmessage.h  kvi_sp_ctcp.cpp  kvi_sp_literal.cpp  kvi_sp_numeric.cpp  kvi_sparser.cpp  kvi_sparser.h
src/kvirc/ui/: kvi_actiondrawer.cpp  kvi_actiondrawer.h  kvi_channel.cpp  kvi_channel.h  kvi_colorwin.cpp  kvi_console.cpp  kvi_console.h  kvi_cryptcontroller.cpp  kvi_cryptcontroller.h  kvi_ctcppagedialog.cpp  kvi_ctcppagedialog.h  kvi_customtoolbar.cpp  kvi_customtoolbar.h  kvi_debugwindow.cpp  kvi_dynamictooltip.cpp  kvi_dynamictooltip.h  kvi_filedialog.cpp  kvi_frame.cpp  kvi_frame.h  kvi_historywin.cpp  kvi_htmldialog.h  (+60 more)
src/modules/: .svnignore  CMakeLists.txt  module.pri  modules.pro
src/win32registrar/: win32registrar.pro  win32registrar.rc
(+432 files in other folders)
